@@ -275,10 +275,16 @@ $lxr_map =
 # values.  For the "Status" metric below however, it is recording the
 # "state" of the thread, so an initial state of "Submitted" is reasonable.
 # For the other metrics below, an initial value makes no sense.
+# Metric items can have an optional show_on_main_page list that will
+# force the numbers of comments with the metric settings to be reported
+# on the main page of codestriker. 
 $comment_state_metrics =
     [ 
-      { name=>'Status', values=>['Submitted', 'Invalid', 'Completed'],
-	                default_value=>'Submitted' }
+      { name             => 'Status', 
+	values           => ['Submitted', 'Invalid', 'Completed'],
+	default_value    => 'Submitted',
+	show_on_mainpage => ['Submitted' ] 
+      }
     ];
 
 # Two metrics defined: Status and Type.
