@@ -38,6 +38,9 @@
         <th>Reviewer</th>
         <th>Cc</th>
         <th><a href="[% list_sort_url | uri | html_entity %]&topic_sort_change=created">Created</a></th>
+        [% FOREACH commentmetric = commentmetrics %]
+            <th>[% commentmetric.value | html_entity %]</th>
+        [% END %]
 	[% IF bugdb_enabled != 0 %]
         <th>Bug IDs</th>
 	[% END %]
@@ -55,6 +58,9 @@
         <td>[% topic.reviewer | html_entity %]</td>
         <td>[% IF topic.cc == "" %]&nbsp;[% ELSE %][% topic.cc | html_entity %][% END %]</td>
         <td>[% topic.created | html_entity %]</td>
+        [% FOREACH commentmetric = topic.commentmetrics %]
+            <td>[% commentmetric.count | html_entity %]</td>
+        [% END %]
 	[% IF bugdb_enabled != 0 %]
         <td>[% IF topic.bugids == "" %]&nbsp;[% ELSE %][% topic.bugids %][% END %]</td>
 	[% END %]
