@@ -54,6 +54,14 @@ Version 1.8.4
   as a reference to a bug id, and will be used in the topic's bugid
   field.
 
+* Added an optional show_on_mainpage attribute to the comment metrics
+  configuration, which specifies which comment metric counts will
+  appear on the topic list page.  From Jason Remilliard.
+
+* Reviewers who haven't viewed a topic will have their names
+  surrounded by parenthesis in the topic list page.  From Jason
+  Remilliard.
+
 Version 1.8.3
 
 * It is now possible to specify multiple metrics associated with a
